--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ nav ul li a {
 
 .hero {
     background: url('zeitreise.jpg') center/cover no-repeat;
-    color: white;
+    color: black;
     text-align: center;
     padding: 100px 20px;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .hero h1 {
